Setting up Server and API
Setting up server to grab information from Pokemon API

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <p id="one"></p>
     <button onclick="testJS()">Test JavaScript</button>
     <button onclick="testServer()">Test Server Connection</button>
+    <button onclick="testPokemonAPI()">Test Pokemon API from front end</button>
+    <button onclick="testPokemonAPIFromServer()">Test Pokemon API from server</button>
+    <button onclick="getDataFromPokemonArray()">Pokemon Array</button>
     
     
 
